--- a/sg.css
+++ b/sg.css
@@ -1,8 +1,9 @@
 
 html,body {width:100%;height:100%;margin:0;padding:0;border:0;background:#000;}
 
-#debug {
+#info {
   position:absolute; top:0; right:0;
+  text-align:right;
   color:#FFF;
 }
 
