--- a/sg.css
+++ b/sg.css
@@ -2,17 +2,43 @@
 html,body {width:100%;height:100%;margin:0;padding:0;border:0;background:#000;}
 
 #info {
+  z-index:9;
   position:absolute; top:0; right:0;
   text-align:right;
   color:#FFF;
 }
 
 #controls {
+  z-index:10;
   position:absolute; top:0; left:0;
   width:400px; height:100px;
 }
+  .control-item {
+    transition:0.1s linear;
+    opacity:0.4;
+  }
+  .control-item:hover {
+    opacity:1;
+  }
+  #sg {
+    width:100px; height:100px; float:left;
+    background:#0f0;
+  }
+  #belt {
+    width:100px; height:100px; float:left;
+    background:#888;
+  }
+  #backpack {
+    width:100px; height:100px; float:left;
+    background:#A0A;
+  }
+  #mobiledevice {
+    width:100px; height:100px; float:left;
+    background:#090;
+  }
 
 #canvas {
+  z-index:1;
   position:absolute; top:0; left:0;
   width:100%; height:100%;
 }
