--- a/sg.css
+++ b/sg.css
@@ -10,10 +10,13 @@ html,body {width:100%;height:100%;margin:0;padding:0;border:0;background:#000;}
 
 #controls {
   z-index:10;
-  position:absolute; top:0; left:0;
-  width:400px; height:100px;
+  position:absolute; top:0; left:calc(50% - 200px);
+  width:240px; height:70px;
 }
   .control-item {
+    z-index:12;
+    position:absolute;
+    width:50px; height:50px;
     transition:0.1s linear;
     opacity:0.4;
   }
@@ -21,20 +24,25 @@ html,body {width:100%;height:100%;margin:0;padding:0;border:0;background:#000;}
     opacity:1;
   }
   #sg {
-    width:100px; height:100px; float:left;
+    z-index:11;
+    left:0; top:0;
+    width:100%; height:100%;
     background:#0f0;
+    border:2px solid #777;
+    border-top:0;
+    border-radius: 0 0 10px 10px;
   }
   #belt {
-    width:100px; height:100px; float:left;
+    bottom:0; left:45px;
     background:#888;
   }
   #backpack {
-    width:100px; height:100px; float:left;
-    background:#A0A;
+    bottom:0; left:95px;
+    background:#A00;
   }
   #mobiledevice {
-    width:100px; height:100px; float:left;
-    background:#090;
+    bottom:0; left:145px;
+    background:#00B;
   }
 
 #canvas {
