--- a/sg.css
+++ b/sg.css
@@ -10,12 +10,11 @@ html,body {width:100%;height:100%;margin:0;padding:0;border:0;background:#000;}
 
 #controls {
   z-index:10;
-  position:absolute; top:0; left:calc(50% - 200px);
+  position:absolute; top:0; left:calc(50% - 120px);
   width:240px; height:70px;
 }
   .control-item {
-    z-index:12;
-    position:absolute;
+    z-index:12; float:left;
     width:50px; height:50px;
     transition:0.1s linear;
     opacity:0.4;
@@ -24,29 +23,27 @@ html,body {width:100%;height:100%;margin:0;padding:0;border:0;background:#000;}
     opacity:1;
   }
   #sg {
-    z-index:11;
-    left:0; top:0;
-    width:100%; height:100%;
-    background:#0f0;
-    border:2px solid #777;
-    border-top:0;
-    border-radius: 0 0 10px 10px;
+    background:#00D;
   }
   #belt {
-    bottom:0; left:45px;
     background:#888;
   }
   #backpack {
-    bottom:0; left:95px;
     background:#A00;
   }
   #mobiledevice {
-    bottom:0; left:145px;
-    background:#00B;
+    background:#0B0;
   }
 
 #canvas {
   z-index:1;
   position:absolute; top:0; left:0;
   width:100%; height:100%;
+}
+
+.dev_softpanel {
+  z-index:1000;
+  margin:10px 0;
+  opacity:0.7;
+  background:rgba(255,255,0,0.1);
 }
