--- a/sg.css
+++ b/sg.css
@@ -2,6 +2,9 @@
 html,body {width:100%;height:100%;margin:0;padding:0;border:0;background:#000;}
 
 #info {
+}
+
+#debug {
   z-index:9;
   position:absolute; top:0; right:0;
   text-align:right;
@@ -22,23 +25,33 @@ html,body {width:100%;height:100%;margin:0;padding:0;border:0;background:#000;}
   .control-item:hover {
     opacity:1;
   }
-  #sg {
+  #selectGameplay {
     background:#00D;
   }
-  #belt {
+  #selectBelt {
     background:#888;
   }
-  #backpack {
+  #selectBackpack {
     background:#A00;
   }
-  #mobiledevice {
+  #selectMobiledevice {
     background:#0B0;
   }
+
+#mobiledevice {
+  position:absolute; top:0; left:0;
+  padding:100px;
+  background:#FFF;
+}
 
 #canvas {
   z-index:1;
   position:absolute; top:0; left:0;
   width:100%; height:100%;
+}
+
+.money {
+  color:Green;
 }
 
 .dev_softpanel {
