--- a/sg.css
+++ b/sg.css
@@ -12,12 +12,12 @@ html,body {width:100%;height:100%;margin:0;padding:0;border:0;background:#000;}
 }
 
 #controls {
-  z-index:10;
+  z-index:30;
   position:absolute; top:0; left:calc(50% - 120px);
   width:240px; height:70px;
 }
   .control-item {
-    z-index:12; float:left;
+    z-index:32; float:left;
     width:50px; height:50px;
     transition:0.1s linear;
     opacity:0.4;
@@ -38,10 +38,19 @@ html,body {width:100%;height:100%;margin:0;padding:0;border:0;background:#000;}
     background:#0B0;
   }
 
+.equipment {
+  z-index:20;
+  position:absolute; top:5%; left:5%;
+  width:90%; height:90%;
+}
+#belt {
+  background:rgba(75,30,10,0.5);
+}
+#backpack {
+  background:rgba(20,150,90,0.5);
+}
 #mobiledevice {
-  position:absolute; top:0; left:0;
-  padding:100px;
-  background:#FFF;
+  background:rgba(30,220,0,0.5);
 }
 
 #canvas {
@@ -54,9 +63,13 @@ html,body {width:100%;height:100%;margin:0;padding:0;border:0;background:#000;}
   color:Green;
 }
 
+.hide {
+  display:none;
+}
+
 .dev_softpanel {
   z-index:1000;
-  margin:10px 0;
+  margin:4px;
   opacity:0.7;
   background:rgba(255,255,0,0.1);
 }
