--- a/sg.css
+++ b/sg.css
@@ -12,9 +12,9 @@ html,body {width:100%;height:100%;margin:0;padding:0;border:0;background:#000;}
 }
 
 #controls {
-  z-index:30;
-  position:absolute; top:0; left:calc(50% - 120px);
-  width:240px; height:70px;
+  z-index:30; display:inline-block;
+  position:absolute; top:0; left:0;
+  height:70px;
 }
   .control-item {
     z-index:32; float:left;
@@ -37,6 +37,9 @@ html,body {width:100%;height:100%;margin:0;padding:0;border:0;background:#000;}
   #selectMobiledevice {
     background:#0B0;
   }
+  #selectStore {
+    background:#F90;
+  }
 
 .equipment {
   z-index:20;
@@ -52,6 +55,21 @@ html,body {width:100%;height:100%;margin:0;padding:0;border:0;background:#000;}
 #mobiledevice {
   background:rgba(30,220,0,0.5);
 }
+  #md_clock {
+  }
+  #md_sleep {
+  }
+  #md_money {
+  }
+  #md_saveGame {
+  }
+  #md_loadGame {
+  }
+  #md_options {
+  }
+#store {
+  background:rgba(100,0,0,0.5);
+}
 
 #canvas {
   z-index:1;
@@ -59,9 +77,6 @@ html,body {width:100%;height:100%;margin:0;padding:0;border:0;background:#000;}
   width:100%; height:100%;
 }
 
-.money {
-  color:Green;
-}
 
 .hide {
   display:none;
