--- a/sg.css
+++ b/sg.css
@@ -40,6 +40,12 @@ html,body {width:100%;height:100%;margin:0;padding:0;border:0;background:#000;}
   #selectStore {
     background:#F90;
   }
+  #selectAction {
+    background:#FFF;
+  }
+  #selectItem {
+    background:#FFF;
+  }
 
 .equipment {
   z-index:20;
@@ -69,6 +75,12 @@ html,body {width:100%;height:100%;margin:0;padding:0;border:0;background:#000;}
   }
 #store {
   background:rgba(100,0,0,0.5);
+}
+#actions {
+  background:rgba(100,100,100,0.5);
+}
+#items {
+  background:rgba(255,255,255,0.5);
 }
 
 #canvas {
