--- a/sg.css
+++ b/sg.css
@@ -77,9 +77,15 @@ html,body {width:100%;height:100%;margin:0;padding:0;border:0;background:#000;}
   background:rgba(100,0,0,0.5);
 }
 #actions {
+  z-index:10;
+  position:absolute; top:50px; left:200px;
+  width:150px;
   background:rgba(100,100,100,0.5);
 }
 #items {
+  z-index:10;
+  position:absolute; top:50px; left:300px;
+  width:250px;
   background:rgba(255,255,255,0.5);
 }
 
