--- a/sg.css
+++ b/sg.css
@@ -1,5 +1,5 @@
 
-html,body {width:100%;height:100%;margin:0;padding:0;border:0;background:#000;}
+html,body {width:100%;height:100%;margin:0;padding:0;border:0;background:#000;user-select:none;}
 
 #info {
 }
@@ -49,8 +49,8 @@ html,body {width:100%;height:100%;margin:0;padding:0;border:0;background:#000;}
 
 .equipment {
   z-index:20;
-  position:absolute; top:5%; left:5%;
-  width:90%; height:90%;
+  position:absolute; top:50px; left:50px;
+  width:calc(100% - 100px); height:calc(100% - 100px);
 }
 #belt {
   background:rgba(75,30,10,0.5);
@@ -79,7 +79,7 @@ html,body {width:100%;height:100%;margin:0;padding:0;border:0;background:#000;}
 #actions {
   z-index:10;
   position:absolute; top:50px; left:200px;
-  width:150px;
+  width:100px;
   background:rgba(100,100,100,0.5);
 }
 #items {
