--- a/sg.css
+++ b/sg.css
@@ -82,6 +82,15 @@ html,body {width:100%;height:100%;margin:0;padding:0;border:0;background:#000;us
   width:100px;
   background:rgba(100,100,100,0.5);
 }
+.action-mode {
+  cursor:pointer;
+}
+.action-mode:hover {
+  color:#00D;
+}
+.action-selected {
+  color:#F90;
+}
 #items {
   z-index:10;
   position:absolute; top:50px; left:300px;
