--- a/sg.css
+++ b/sg.css
@@ -46,6 +46,10 @@ html,body {width:100%;height:100%;margin:0;padding:0;border:0;background:#000;us
   #selectItem {
     background:#FFF;
   }
+  .control-selector-selected {
+    opacity:1;
+    box-shadow:1px 1px 3px 0 inset #FFF;
+  }
 
 .equipment {
   z-index:20;
@@ -77,7 +81,7 @@ html,body {width:100%;height:100%;margin:0;padding:0;border:0;background:#000;us
   background:rgba(100,0,0,0.5);
 }
 #actions {
-  z-index:10;
+  z-index:50;
   position:absolute; top:50px; left:200px;
   width:100px;
   background:rgba(100,100,100,0.5);
@@ -92,7 +96,7 @@ html,body {width:100%;height:100%;margin:0;padding:0;border:0;background:#000;us
   color:#F90;
 }
 #items {
-  z-index:10;
+  z-index:50;
   position:absolute; top:50px; left:300px;
   width:250px;
   background:rgba(255,255,255,0.5);
