--- a/sg.css
+++ b/sg.css
@@ -39,7 +39,7 @@ html,body {width:100%;height:100%;margin:0;padding:0;border:0;background:#000;us
     background:url('images/controls/mobiledevice_1.png') no-repeat center/46px;
   }
   #selectStore {
-    background:#F90;
+    background:url('images/controls/mercantile.png') no-repeat center;
   }
   #selectAction {
     background:#FFF;
