--- a/sg.css
+++ b/sg.css
@@ -42,10 +42,14 @@ html,body {width:100%;height:100%;margin:0;padding:0;border:0;background:#000;us
     background:url('images/controls/mercantile.png') no-repeat center;
   }
   #selectAction {
-    background:#FFF;
+    width:36px; height:36px; margin:4px;
+    border:3px solid #39F;
+    border-radius:50%;
   }
   #selectItem {
-    background:#FFF;
+    width:32px; height:32px; margin:7px;
+    border:2px solid #A72;
+    border-radius:50%;
   }
   .control-selector-selected {
     opacity:1;
