--- a/sg.css
+++ b/sg.css
@@ -46,7 +46,12 @@ html,body {width:100%;height:100%;margin:0;padding:0;border:0;background:#000;us
     border:3px solid #39F;
     border-radius:50%;
   }
-  #selectItem {
+  #selectSeed {
+    width:32px; height:32px; margin:7px;
+    border:2px solid #3A5;
+    border-radius:50%;
+  }
+  #selectConstructable {
     width:32px; height:32px; margin:7px;
     border:2px solid #A72;
     border-radius:50%;
@@ -107,9 +112,15 @@ html,body {width:100%;height:100%;margin:0;padding:0;border:0;background:#000;us
 .action-selected {
   color:#F90;
 }
-#items {
+#seeds {
   z-index:50;
   position:absolute; top:50px; left:300px;
+  width:250px;
+  background:rgba(255,255,255,0.5);
+}
+#constructables {
+  z-index:50;
+  position:absolute; top:50px; left:500px;
   width:250px;
   background:rgba(255,255,255,0.5);
 }
