store lookin pretty OK!

--- a/sg.css
+++ b/sg.css
@@ -141,7 +141,7 @@ html,body {width:100%;height:100%;margin:0;padding:0;border:0;background:#000;us
   }
   .store-seed {
     position:relative;
-    width:220px; height:85px; float:left;
+    width:220px; height:90px; float:left;
     margin:8px; padding:8px;
     background-color:rgba(100,140,100,0.2);
     border:1px solid rgba(40,120,10,0.3);
@@ -166,9 +166,16 @@ html,body {width:100%;height:100%;margin:0;padding:0;border:0;background:#000;us
   .store-seed-owned {
     z-index:52;
     position:absolute; top:10px; right:10px;
-    color:#0E8;
+    padding:1px;
+    font-size:13px;
+    color:#0FA;
+    background-color:rgba(0,0,0,0.4);
+    border-radius:3px;
+    text-shadow: 0 0 2px #000;
   }
   .store-seed-cost {
+    display:inline-block;
+    margin:5px 0;
     font-size:12px;
   }
   .store-seed-text {
@@ -176,9 +183,9 @@ html,body {width:100%;height:100%;margin:0;padding:0;border:0;background:#000;us
   }
   .store-seed-purchase {
     float:left;
-    width:140px;
+    width:100%;
+    margin-top:2px;
     padding:3px;
-    border:1px solid rgba(255,255,255,0.1);
   }
   .store-purchase-incrementer {
     width:30px; float:left;
@@ -186,16 +193,38 @@ html,body {width:100%;height:100%;margin:0;padding:0;border:0;background:#000;us
   .store-purchase-quantityIncrease {
     width:0; height:0;
     display:block;
-    border-left:10px solid transparent;
-    border-right:10px solid transparent;
-    border-bottom:10px solid #f00;
+    padding:1px;
+    background-color:rgba(0,0,0,0.5);
+    border-radius:5px 5px 0 0;
+    border-left:9px solid transparent;
+    border-right:9px solid transparent;
+    border-bottom:9px solid #A00;
+  }
+  .store-purchase-quantityIncrease:hover {
+    border-bottom-color:#F00;
+  }
+  .store-purchase-quantSep {
+    height:2px; width:20px; background-color:#000;
   }
   .store-purchase-quantityDecrease {
     width:0; height:0;
     display:block;
-    border-left:10px solid transparent;
-    border-right:10px solid transparent;
-    border-top:10px solid #f00;
+    padding:1px;
+    background-color:rgba(0,0,0,0.5);
+    border-radius:0 0 5px 5px;
+    border-left:9px solid transparent;
+    border-right:9px solid transparent;
+    border-top:9px solid #A00;
+  }
+  .store-purchase-quantityDecrease:hover {
+    border-top-color:#F00;
+  }
+  .purchase-seed-total {
+    margin:2px 0 0 16px;
+    padding:1px 3px;
+    background:rgba(0,0,0,0.5);
+    border-radius:4px;
+    color:#D80;
   }
   .store-purchase-button {
     display:block; float:right;
@@ -241,6 +270,6 @@ html,body {width:100%;height:100%;margin:0;padding:0;border:0;background:#000;us
 .dev_softpanel {
   z-index:1000;
   margin:4px;
-  opacity:0.7;
+  opacity:0.2;
   background:rgba(255,255,0,0.1);
 }
