autoharvester... need macro functions for movmnt etc

--- a/sg.css
+++ b/sg.css
@@ -239,6 +239,7 @@ html,body {width:100%;height:100%;margin:0;padding:0;border:0;background:#000;us
     background:#339;
   }
   .store-purchase-button:hover {
+    background:rgba(0,0,0,0.6);
     border-color:#FFF;
   }
 
@@ -247,8 +248,7 @@ html,body {width:100%;height:100%;margin:0;padding:0;border:0;background:#000;us
   position:absolute; top:0; left:0;
   width:100%; height:100%;
 }
-
-
+ 
 /* "Super" Macros */
 
 .flipVertical {
